# django-serve

./: .gitignore  .hgignore  .hgtags  AUTHORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
django_serve/: __init__.py  __main__.py  apps.py  main.py  version.py
django_serve/management/: __init__.py
django_serve/management/commands/: __init__.py  serve.py
