[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
ignore = W503
max-complexity = 10
max-line-length = 120
select = B,C,E,F,W,T4,B9
show-source = true

[isort]
combine_as_imports = false
default_section = THIRDPARTY
force_sort_within_sections = true
indent = 4
known_third_party = django
line_length = 120
order_by_type = False
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True


[metadata]
license-file = LICENSE

[bdist_wheel]
universal = 0
