[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
ignore =
    # Missing trailing comma (flake8-commas)
    C812,
    # Missing trailing comma in Python 3 (flake8-commas)
    C813,
    # Missing trailing comma in Python 2 (flake8-commas)
    C814,
    # Missing trailing comma in Python 3.5+ (flake8-commas)
    C815,
    # Missing trailing comma in Python 3.6+ (flake8-commas)
    C816,
    # Whitespace before ‘:’
    E203,
    # Do not use bare except, specify exception instead
    E722,
    # Line break occurred before a binary operator
    W503,
    # Line break occurred after a binary operator
    W504,
    # Do not use bare except (flake8-bugbear)
    B001
inline-quotes = "
max-complexity = 10
max-line-length = 120
select = B,C,E,F,W,T4,B9
show-source = true

[isort]
combine_as_imports = false
default_section = THIRDPARTY
force_sort_within_sections = true
indent = 4
known_third_party = django
line_length = 120
order_by_type = False
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True


[metadata]
license-file = LICENSE

[bdist_wheel]
universal = 0
